--- a/templates/views/internships.hbs
+++ b/templates/views/internships.hbs
@@ -18,8 +18,9 @@
     <center>
     <div class="section-2">
 
-        <form method="post" action="/internships">
+        <form method="POST" action="/internships">
 
+        <input type="text" name="location" placeholder="Enter City" style="margin-top:10px;padding:10px">
         <input type="text" name="internshipSearch" placeholder="For eg : Web Development" style="margin-top:10px;padding:10px">
         <button class="btn" id="searchInternshipBtn" type="submit"> Search Internships </button>
 
