--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -8,5 +8,9 @@
     {{>header}}
 
     <h1> Job Search </h1>
+
+    <form class="form-control" action="/jobs" method="POST">
+    
+    </form>
 </body>
 </html>
