--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -37,6 +37,8 @@
             <li> <a href="/feedbackPage"> Feedback </a></li>
             <li> <a href="/about"> About </a> </li>
             <li> <a href="/contactus">Contact Us </a> </li>
+            <li> <a href="/dashboard"> Dashboard </a> </li>
+            <li> <a href="/logout"> Logout  </a> </li>
             <li> Search </li>
         </ul>
     </nav>
