--- a/templates/views/internships.hbs
+++ b/templates/views/internships.hbs
@@ -29,6 +29,19 @@
 
     </center>
 
+    <div class="internshipData">
+
+       
+
+        {{internshalaPost}}
+
+
+        {{linkedinPost}}
+    </div>
+
+    <div class="testOutput">
+ 
+    </div>
     
 </body>
 </html>
