--- a/templates/views/partials/header.hbs
+++ b/templates/views/partials/header.hbs
@@ -28,7 +28,7 @@
 
     <nav class="small_navbar">
         <ul>
-            <li> Sitemap </li>
+            <li> <a href="/sitemap"> Sitemap</a></li>
             <li> Language </li>
             <li><a href="/services"> Services </a></li>
             <li><a href="/carreradvice"> Carrer Advice </a> </li>
