--- a/public/css/internshipPage/newsContainer.css
+++ b/public/css/internshipPage/newsContainer.css
@@ -1,3 +1,21 @@
+.headlines{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width:100%;
+}
 .newsContainerDashboard{
 
+ 
+
+    width: 30%;
+    padding:20px;
+ 
+}
+
+.inner-newscontainer{
+
+    padding: 30px;
+    background-color: antiquewhite;
 }
