--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -3,13 +3,24 @@
 
 <head>
     {{>headerMeta}}
-    <link rel="stylesheet" href="/css/internshipPage/newsContainer.css">
+    <link rel="stylesheet" href="/css/dashboardPage/newsContainer.css">
     <title>Dashboard : CareerPilot</title>
 </head>
 
 <body>
 
     {{>header}}
+
+    {{!-- <nav class="sidebar">
+  <ul class="sidebar-nav">
+    <li><a href="#">Stats</a></li>
+    <li><a href="#">Trending</a></li>
+     <li><a href="#">Products</a></li>
+    <li><a href="#">Appearance</a></li>
+    <li><a href="#">Help</a></li>
+    <li><a href="#">Settings</a></li>
+  </ul>
+</nav> --}}
 
     <h1> Welcome, {{userName}} </h1>
 
@@ -167,6 +178,158 @@
         </div>
 
     </div>
+
+    <div class="dashboardItems" id="internshipContainerDashboard">
+
+        <h2> Internships </h2>
+
+
+
+        <div class="dashboard-subitems">
+            Search Internships from various portals
+
+            <br><button class="btn"> <a href="/internships"> Search Courses</a></button>
+        </div>
+
+        <div class="dashboard-subitems">
+            Search internships from top MNCs
+
+            <br><button class="btn"> <a href="/internships"> Search Internships </a></button>
+        </div>
+
+    </div>
+
+    {{!-- Settings Options // For the side navbar --}}
+
+    <div class="dashboardItems" id="settingsContainerDashboard">
+
+        <h2> User Settings </h2>
+
+
+
+
+        <div class="dashboard-subitems">
+            Switch Dark/Light Mode
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+         <div class="dashboard-subitems">
+            Account Settings
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+        <div class="dashboard-subitems">
+            Account Settings
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+    </div>
+
+
+<div class="dashboardItems" id="internshipContainerDashboard">
+
+        <h2> Internships </h2>
+
+
+
+        <div class="dashboard-subitems">
+            Search Internships from various portals
+
+            <br><button class="btn"> <a href="/internships"> Search Courses</a></button>
+        </div>
+
+        <div class="dashboard-subitems">
+            Search internships from top MNCs
+
+            <br><button class="btn"> <a href="/internships"> Search Internships </a></button>
+        </div>
+
+    </div>
+
+    {{!-- Settings Options // For the side navbar --}}
+
+    <div class="dashboardItems" id="settingsContainerDashboard">
+
+        <h2> User Settings </h2>
+
+
+
+
+        <div class="dashboard-subitems">
+            Switch Dark/Light Mode
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+         <div class="dashboard-subitems">
+            Account Settings
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+        <div class="dashboard-subitems">
+            Account Settings
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+    </div>
+
+
+<div class="dashboardItems" id="internshipContainerDashboard">
+
+        <h2> Internships </h2>
+
+
+
+        <div class="dashboard-subitems">
+            Search Internships from various portals
+
+            <br><button class="btn"> <a href="/internships"> Search Courses</a></button>
+        </div>
+
+        <div class="dashboard-subitems">
+            Search internships from top MNCs
+
+            <br><button class="btn"> <a href="/internships"> Search Internships </a></button>
+        </div>
+
+    </div>
+
+    {{!-- Settings Options // For the side navbar --}}
+
+    <div class="dashboardItems" id="settingsContainerDashboard">
+
+        <h2> User Settings </h2>
+
+
+
+
+        <div class="dashboard-subitems">
+            Switch Dark/Light Mode
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+         <div class="dashboard-subitems">
+            Account Settings
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+        <div class="dashboard-subitems">
+            Account Settings
+
+            <br><button class="btn"> <a href="/internships"> Go </a></button>
+        </div>
+
+    </div>
+
+
+
 
 
 
