--- a/templates/views/partials/internshipContainer.hbs
+++ b/templates/views/partials/internshipContainer.hbs
@@ -1,12 +1,17 @@
 <div class="internshipContainer">
 
-    {{#each newsResponse.data.articles}}
+{{!--   
 
-    <h4> Internship Title : {{title}} </h4>
+     {{internshalaData}}
+
+
+        {{linkedinData}} --}}
+
+    <h4> Internship Title : {{internshalaData}} </h4>
 
     <p> Location of the internship </p>
     <p> Date Posted </p>
     <button class="btn"> View Internship </button>
 
-       {{/each}}
+    
 </div>
