--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,12 +16,20 @@ a{
 
 .btn{
 
-    background-color: #cbb26a;
-    color: black;
+    background-color: #8D7BFF;
+    color: white;
+    border: 0px transparent;
+
+    /* background-color: #cbb26a; */
+    /* color: black; */
     padding: 10px;
     /* border-radius: 12px; */
     margin: 2px;
     cursor: pointer;
+}
+
+.btn a{
+    color: white !important;
 }
 
 /* LOADING SPINNER */
@@ -52,12 +60,13 @@ a{
 .top_header{
 
     width: 100%;
-    border: 2px solid black;
-    background-color: black;
-    color: white;
+    /* border: 2px solid black; */
+    background-color: #F5FEFD;
+    /* background-color: black; */
+    color: rgb(0, 0, 0);
     display: flex;
     flex-wrap: wrap;
-    min-height: 70px;
+    /* min-height: 70px; */
     justify-content: space-around;
     align-items: center;
 }
@@ -66,14 +75,14 @@ a{
 #title{
     float: left;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #CBB26A;
+    color: #735eff;
     font-size: 1.4rem;
 
 }
 
 #title h1 :hover{
 
-    color: #ffc61a;
+    color: #7e6bff;
     cursor: pointer;
 }
 
@@ -102,12 +111,12 @@ a{
 
 .top_header ul li a{
     cursor: pointer;
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
 .login_box{
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 .login_box a{
@@ -116,7 +125,7 @@ a{
 
 .small_navbar{
 
-    background-color: #CBB26A;
+    background-color: #cac2ff;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -133,6 +142,11 @@ a{
     list-style-type: none;
     padding: 7px;
     margin: 0px 5px;
+}
+
+.small_navbar ul li a{
+    color:black;
+
 }
 
 /* COVER */
