--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -10,6 +10,10 @@
     <h1> Job Search </h1>
 
     <form class="form-control" action="/jobs" method="POST">
+
+    <label for="jobKeyword"> Job Keyword </label>
+    <input type="text" placeholder="Enter Job Keyword" name="jobKeyword" id="jobKeyword">
+    <button class="btn" type="submit"> Search Jobs </button>
     
     </form>
 </body>
