--- a/templates/views/partials/header.hbs
+++ b/templates/views/partials/header.hbs
@@ -1,6 +1,6 @@
  <header class="top_header">
         <div class="header_logo">
-            <img src="/img/icons/logo_symbol.png" alt="Logo. Image not available" height="80px" width="90px">
+            {{!-- <img src="/img/icons/logo_symbol.png" alt="Logo. Image not available" height="80px" width="90px"> --}}
             <h1 id="title"> CareerPilot </h1>
         </div>
         <nav class="header_navbar">
