9thCommit Wrote Nodemailer Functionality for ContactUs Form

--- a/templates/views/loginPage.hbs
+++ b/templates/views/loginPage.hbs
@@ -5,6 +5,9 @@
 
     <h1> Login </h1>
 
+    <p id="isLoginError"> {{loginErrorIfAny}} </p>
+    {{!-- {{loginErrorIfAny}} --}}
+
     <form action="/login" method="POST">
 
         <div class="form-container">
@@ -21,6 +24,8 @@
         </div>
 
     </form>
+
+
 
 
 
