--- a/public/css/index.css
+++ b/public/css/index.css
@@ -32,6 +32,14 @@ a{
     color: white !important;
 }
 
+#isLoginError{
+
+    display: inline-block;
+    padding: 0.5rem;
+    margin: 0.5rem;
+
+}
+
 /* LOADING SPINNER */
 
 #loader{
@@ -67,6 +75,7 @@ a{
     display: flex;
     flex-wrap: wrap;
     /* min-height: 70px; */
+    padding: 1em;
     justify-content: space-around;
     align-items: center;
 }
