--- a/templates/views/contactus.hbs
+++ b/templates/views/contactus.hbs
@@ -9,13 +9,13 @@
 
     <form class="form-control" action="/contactus" method="POST">
 
-    <label for="name">
-        <input type="text" name="name" id="name" placeholder="Name*" required>
+    
+        <input type="text" name="username" id="name" placeholder="Name*" required>
         <input type="email" name="email" id="email" placeholder="Email Address*" required>
         <input type="text" name="subject" id="subject" placeholder="Subject*" required>
-        <textarea rows="13" cols="13" name="Message" id="message"></textarea>
+        <textarea rows="13" cols="13" name="message" id="message"></textarea>
         <button class="btn" type="submit"> Send </button>
-    </label>
+
     
     </form>
     
