--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{>headerMeta}}
     <title>Scholarship Search : CarrerPilot</title>
 </head>
+
 <body>
     {{>header}}
-    
+
 
     <div class="container">
 
@@ -16,18 +18,27 @@
     <div class="scholarshipPortal">
 
         <form action="/scholarships" method="POST">
-        
-        <h2> India's No. #1 Scholarship Search Engine </h2>
-        <br>
-        <label for="education"> Your Goal/Education </label>
-        <input type="text" id="educationForScholarship" name="educationForScholarship">
 
-        <label for="location"> Your Location </label>
-        <input type="text" id="locationForScholarship" name="locationForScholarship">
+            <h2> India's No. #1 Scholarship Search Engine </h2>
+            <br>
+            <label for="education"> Your Goal/Education </label>
+            <input type="text" id="educationForScholarship" name="educationForScholarship">
 
-        <button class="btn" type="submit"> Search </button>
-        
+            <label for="location"> Your Location </label>
+            <input type="text" id="locationForScholarship" name="locationForScholarship">
+
+            <button class="btn" type="submit"> Search </button>
+            <label for="cars">Choose a state :</label>
+
+            <select name="locationnForScholarship" id="locationForScholarship">
+                <option value="gujarat">Gujarat</option>
+                <option value="saab">Saab</option>
+                <option value="mercedes">Mercedes</option>
+                <option value="audi">Audi</option>
+            </select>
+
         </form>
     </div>
 </body>
+
 </html>
