Courses & Scholarships backend updated

--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -30,6 +30,8 @@
             <button class="btn" type="submit"> Search </button>
             <label for="cars">Choose a state :</label>
 
+            {{!--  Yet to work  --}}
+            
             <select name="locationnForScholarship" id="locationForScholarship">
                 <option value="gujarat">Gujarat</option>
                 <option value="saab">Saab</option>
