Courses & Scholarships backend updated

--- a/templates/views/courses.hbs
+++ b/templates/views/courses.hbs
@@ -10,6 +10,20 @@
     
     <h1> Courses </h1>
 
-    <form class="form-control" action ="/courses" method="POST"
+    <form class="form-control" action ="/courses" method="POST">
+
+    <input type="text" placeholder="Enter training/course" name="courseKeyword">
+    
+             <select name="courseLocation" id="courseLocation">
+                <option value="Online">Online</option>
+            
+            </select>
+
+    <button class="btn" type="submit"> Search </button>
+    
+
+
+    
+    </form>
 </body>
 </html>
