--- a/templates/views/jobs.hbs
+++ b/templates/views/jobs.hbs
@@ -15,6 +15,14 @@
     <input type="text" placeholder="Enter Job Keyword" name="jobKeyword" id="jobKeyword">
     <button class="btn" type="submit"> Search Jobs </button>
     
+    <div class="jobFilters">
+
+        <p> Work Mode </p>
+
+        Work from office <input type="checkbox"> <br>
+        Hybrid <input type="checkbox"> <br>
+        Remote/WFH <input type="checkbox"> <br>
+    </div>
     </form>
 </body>
 </html>
