--- a/templates/views/certifications.hbs
+++ b/templates/views/certifications.hbs
@@ -1,2 +1,29 @@
-{{>headerMeta}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{>headerMeta}}
+
+    <title> Certification Search : CareerPilot </title>
+</head>
+<body>
 {{>header}}
+
+<div class="container">
+    <h1> Certification Search</h1>
+</div>
+
+<form class="form-control" method="POST" action="/certifications">
+
+<h2> Enter Certification Keyword </h2>
+
+<input type="text" placeholder="For eg: Web Development">
+
+<button class="btn" type="submit"> Search Certifications</button>
+</form>
+
+    
+</body>
+</html>
