Frontend Dashboard upgraded

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,23 +14,29 @@
 
         <main class="container">
 
-            <h1> CareerPilot : Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores aliquid provident nemo? </h1>
+            <h1> CareerPilot </h1>
     
-            <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, pariatur! </h3>
+            <h3>Career Exploration Made Easy: Jobs, Scholarships, and More </h3>
     
         
         </main>
 
-        <h1> About Us  </h1>
-        <h4> Welcome to our website, a platform designed specifically for students and graduates seeking 
+        <h1 class="section-titles"> About Us  </h1>
+        <h4 class="section-para index-para"> Welcome to our website, a platform designed specifically for students and graduates seeking 
             opportunities to further their education and careers.We offer a comprehensive collection of information related to scholarships, job alerts, certification courses, and much more, all in one convenient location. Our mission is to make the process of finding relevant and valuable resources as seamless as possible. With a user-friendly interface and up-to-date information, we aim to empower our visitors to achieve their academic and professional goals. Whether you're just starting out or looking to advance your career, our website is your one-stop-shop for all your needs.
              Thank you for choosing us as your trusted resource </h4>
+              <br>
+              <div class="img-containers-center">
+                
+              <img class="section-para" src="/img/about-img.jpg" height="30%" width="40%">
+              </div> 
 
     </div>
+    
 
     <section class="sec2">
 
-        <h1> Top IT Companies hiring now  </h1>
+        <h1 class="section-titles"> Top IT Companies hiring now  </h1>
 
         <div class="companies-list">
             
@@ -41,22 +47,32 @@
 
     <section class="sec3">
 
-        <h1> Latest News </h1>
+        <h1 class="section-titles"> Latest News </h1>
 
     </section>
 
     <section class="sec4">
 
-        <h1> Our Mission </h1>
+        <h1 class="section-titles"> Our Mission </h1>
+
+        <h2 class="section-subtitles"> Why CareerPilot? </h2>
     </section>
 
     <section class="sec5">
-        <h1> Announcements </h1>
+        <h1 class="section-titles"> Announcements </h1>
     </section>
 
-    <footer class="footer">
-        <!-- Black in color -->
-    </footer>
+    <section class="sec6">
+
+        <h1 class="section-subtitles"> Rated #1 CareerPortal in India</h1>
+        <div class="yellow-stars section-para">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+
+    </section>
+
+
+
+   {{>footer}}
+
 
     
 </body>
