--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -19,7 +19,7 @@
 
         <form action="/scholarships" method="POST">
 
-            <h2> India's No. #1 Scholarship Search Engine </h2>
+            <h2 class="section-titles"> India's No. #1 Scholarship Search Engine </h2>
             <br>
             <label for="education"> Your Goal/Education </label>
 
@@ -46,7 +46,7 @@
             <select name="locationForScholarship" id="locationForScholarship">
                 <option value="gujarat">Gujarat</option>
                 <option value="assam">Assam</option>
-                <option value="mercedes"></option>
+                <option value="mercedes">Xyz</option>
                 <option value="audi">Audi</option>
             </select>
 
@@ -55,9 +55,14 @@
         <input type="text" name="scholarshipKeyword" id="scholarshipKeyword">
         <button class="btn" type="submit"> Search</button>
 
-        <h4> Filters</h4>
         </form>
 
+        <div class="result-filters">
+
+        <h4> Filters</h4>
+
+        
+        </div>
 
       
     </div>
