--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -13,8 +13,6 @@ a {
 
 /* UTILITY CLASS */
 
-/* Buttons */
-
 
 .btn {
 
@@ -42,33 +40,6 @@ a {
 
 }
 
-/* Blockquote */
-
-blockquote {
-    border: none;
-    font-family: Georgia, "Times New Roman", Times, serif;
-   
-}
-
-blockquote h3 {
-    font-size: 1.1rem;
-}
-
-blockquote h3:before {
-    content: open-quote;
-    font-weight: bold;
-    font-size: 70px;
-    color: #735eff;
-}
-
-blockquote h3:after {
-    content: close-quote;
-    font-weight: bold;
-    font-size: 70px;
-    color: #735eff;
-}
-
-
 /* LOADING SPINNER */
 
 #loader {
@@ -90,34 +61,6 @@ blockquote h3:after {
 ::-webkit-scrollbar-thumb {
     background: #7e6bff;
 }
-
-/* Titles & Fonts */
-
-.section-titles {
-
-    text-align: center;
-    padding: 1.1rem;
-    font-size: 1.4rem;
-}
-
-.section-para {
-
-    padding: 1.1rem;
-    font-size: 1.2rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 100;
-}
-
-.section-subtitles{
-    font-size: 1.1rem;
-    font-weight: 100;
-    text-align: center;
-}
-
-.img-containers-center{
-
-}
-
 
 /* HEADER SECTION */
 
@@ -239,6 +182,23 @@ h3 {
     font-size: 1.5rem;
 }
 
+/* Generalized Classes  */
+
+.section-titles {
+
+    text-align: center;
+    padding: 1.1rem;
+    font-size: 1.4rem;
+}
+
+.section-para {
+
+    padding: 1.1rem;
+    font-size: 1.2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+}
+
 .footer {
 
     color: white;
@@ -249,7 +209,38 @@ h3 {
     padding: 10px;
 }
 
-/* INDEX PAGE */
+/* Blockquote */
+
+blockquote {
+    border: none;
+    font-family: Georgia, "Times New Roman", Times, serif;
+   
+}
+
+blockquote h3 {
+    font-size: 1.1rem;
+}
+
+blockquote h3:before {
+    content: open-quote;
+    font-weight: bold;
+    font-size: 70px;
+    color: #735eff;
+}
+
+blockquote h3:after {
+    content: close-quote;
+    font-weight: bold;
+    font-size: 70px;
+    color: #735eff;
+}
+
+/* Sidebar */
+
+.sidebar{
+    
+    width: 30%;
+}
 
 /* Rating Section */
 
@@ -259,62 +250,9 @@ h3 {
     text-align: center;
 }
 
-/* Index Para */
-
-.index-para{
-
-    width: 70%;
-    margin: auto;
-    text-align: center;
-}
-
-
 /* Dashboard */
 
-/* Sidebar */
+.welcome{
 
-.sidebar{
-    width:15%;
-    display: inline-block;
-    /* position: fixed; */
-
-    height:100vh;
-    border: 2px solid black;
-   
-}
-
-.sidebar a{
-    
-    color:rgb(0, 0, 0);
-}
-
-.dashboard-container{
-    width: 60%;
-    display: inline;
-
-    border: 2px solid black;
-    /* position: relative; */
-
-}
-
-
-.dashboard-section{
-
-    
-    display: inline-block;
-}
-
-
-.dashboard-group{
-
-    display: flex;
-    flex-wrap: wrap;
-}
-
-
-/* Load More Button */
-
-#loadMore{
-    text-align: center;
-
+    width:65%;
 }
