Commit - Lost count of no. - Scrapped Data arranged

--- a/templates/views/certifications.hbs
+++ b/templates/views/certifications.hbs
@@ -13,16 +13,27 @@
 
 <div class="container">
     <h1> Certification Search</h1>
+    <p class="section-para">Certifications play a crucial role in today's competitive job market and can significantly enhance an individual's career prospects.</p>
 </div>
+
 
 <form class="form-control" method="POST" action="/certifications">
 
-<h2> Enter Certification Keyword </h2>
+<h2 class="section-titles"> Enter Certification Keyword </h2>
 
 <input type="text" placeholder="For eg: Web Development">
 
 <button class="btn" type="submit"> Search Certifications</button>
+<button class="btn" > Clear </button>
 </form>
+
+<h4 class="section-subtitle" style="text-align: center"> Filters </h4>
+
+<div class="filters">
+
+    <label> Include National Government Certifications</label> <br>
+     <label> Include Certifications from Top MNCs</label>
+</div>
 
     
 </body>
