--- a/templates/views/contactus.hbs
+++ b/templates/views/contactus.hbs
@@ -7,6 +7,12 @@
 <body>
     {{>header}}
 
+    <h1 class="section-titles"> Contact Us </h1>
+    <p class="section-para index-para">
+        Thank you for your interest in contacting us! We value your feedback, inquiries, and suggestions. 
+        Please feel free to reach out to us using the contact form below. We appreciate your time and will do our best to respond promptly.
+    </p> 
+
     <form class="form-control" action="/contactus" method="POST">
 
     
