--- a/templates/views/scholarships.hbs
+++ b/templates/views/scholarships.hbs
@@ -30,7 +30,7 @@
                 <option value="mba">MBA</option>
                 <option value="bba">BBA</option>
                 <option value="dnb">DNB</option>
-                <option value="class_xii">Class XII</option>
+                <option value="class_i_iv">Class I-IV</option>
                 <option value="class_xii">Class XII</option>
             </select>
             {{!-- <input type="text" id="educationForScholarship" name="educationForScholarship"> --}}
@@ -44,16 +44,22 @@
             {{!--  Yet to work  --}}
             
             <select name="locationForScholarship" id="locationForScholarship">
+                <option value="mercedes">All India</option>
                 <option value="gujarat">Gujarat</option>
                 <option value="assam">Assam</option>
-                <option value="mercedes">Xyz</option>
-                <option value="audi">Audi</option>
+                <option value="kerala">Kerela</option>
+                <option value="bihar">Bihar</option>
+                <option value="audi">Himachal Pradesh</option>
+                <option value="nagaland">Nagaland</option>
+                <option value="audi">Andaman and Nicobar Islands</option>
+                <option value="odisha">Odisha</option>
             </select>
 
         <h2> Search by Keyword </h2>
 
         <input type="text" name="scholarshipKeyword" id="scholarshipKeyword">
         <button class="btn" type="submit"> Search</button>
+        <button class="btn"> Clear </button>
 
         </form>
 
@@ -61,7 +67,7 @@
 
         <h4> Filters</h4>
 
-        
+
         </div>
 
       
