--- a/public/css/index.css
+++ b/public/css/index.css
@@ -47,7 +47,7 @@ a {
 blockquote {
     border: none;
     font-family: Georgia, "Times New Roman", Times, serif;
-   
+
 }
 
 blockquote h3 {
@@ -108,14 +108,37 @@ blockquote h3:after {
     font-weight: 100;
 }
 
-.section-subtitles{
+.section-subtitles {
     font-size: 1.1rem;
-    font-weight: 100;
+    font-weight: 600;
     text-align: center;
 }
 
-.img-containers-center{
+.img-containers-center {
 
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+
+}
+
+/* Image Gallery */
+
+.image-gallery {
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-gallery img {
+
+    height: 30%;
+    width: 20%;
+    padding: 5px;
 }
 
 
@@ -161,6 +184,7 @@ blockquote h3:after {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .header_navbar {
@@ -172,17 +196,18 @@ blockquote h3:after {
 .top_header ul li {
     padding: 9px;
     list-style-type: none;
+
 }
 
 .top_header ul li a {
     cursor: pointer;
     color: rgb(0, 0, 0);
     text-decoration: none;
- 
+
 }
 
-.top_header ul li a:hover{
-    color:#5844d8;
+.top_header ul li a:hover {
+    color: #5844d8;
 }
 
 
@@ -220,6 +245,14 @@ blockquote h3:after {
 
 }
 
+/* Navbar Search */
+
+.small_navbar input{
+    padding:3px;
+    border-radius: 5px;
+    border: 0px transparent;
+}
+
 /* COVER */
 
 .container {
@@ -253,7 +286,7 @@ h3 {
 
 /* Rating Section */
 
-.yellow-stars{
+.yellow-stars {
     color: rgb(184, 160, 56);
     font-size: 1.7rem;
     text-align: center;
@@ -261,34 +294,72 @@ h3 {
 
 /* Index Para */
 
-.index-para{
+.index-para {
 
     width: 70%;
     margin: auto;
     text-align: center;
 }
 
+.image-gallery-2{
+    /* width: 80%; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin:20px;
+}
+
+.image-container{
+
+    margin: 10px;
+}
+
+/* Dark Section */
+
+/* .dark-section{
+
+    background-color:#7e6bff;
+    padding: 30px;
+    color: white;
+} */
 
 /* Dashboard */
 
 /* Sidebar */
 
-.sidebar{
-    width:15%;
+.sidebar {
+    width: 15%;
     display: inline-block;
     /* position: fixed; */
 
-    height:100vh;
+    height: 100vh;
     border: 2px solid black;
-   
+
 }
 
-.sidebar a{
-    
-    color:rgb(0, 0, 0);
+.sidebar a {
+
+    color: rgb(0, 0, 0);
 }
 
-.dashboard-container{
+/* Dashboard Sidebar Dropdowns */
+
+.dropdown{
+    position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+
+    color: black;
+
+    text-decoration: none;
+    display: block;
+    text-align: left; 
+
+}
+
+.dashboard-container {
     width: 60%;
     display: inline;
 
@@ -298,23 +369,103 @@ h3 {
 }
 
 
-.dashboard-section{
+.dashboard-section {
 
-    
+
     display: inline-block;
 }
 
 
-.dashboard-group{
+.dashboard-group {
 
     display: flex;
     flex-wrap: wrap;
 }
 
 
+/* Dashboard News Containers */
+
+.inner-newscontainer {
+    height: 350px;
+    overflow: hidden;
+}
+
+
 /* Load More Button */
 
-#loadMore{
+#loadMore {
     text-align: center;
+    display: inline-block;
+    width: fit-content;
+    margin: auto;
 
 }
+
+/* Form Control */
+
+.form-control{
+
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    margin: 20px 0px;
+
+}
+
+.form-control input{
+    padding: 10px;
+}
+
+/* Internship Section */
+
+.resultContainer{
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top:30px;
+
+}
+
+.internshipContainer{
+
+    height: 300px;
+    padding:1rem;
+    background-color: whitesmoke;
+    display: inline-block;
+    width: 300px;
+}
+
+.internshipContainer li{
+    list-style-type: none;
+}
+
+.internshalaContainer{
+
+    width: 80%;
+    margin: auto;
+}
+
+.internshipData{
+
+    width: 80%;
+    /* border: 2px solid black; */
+}
+
+.filters{
+    width: 20%;
+    text-align: center;
+    /* border: 2px solid black; */
+}
+
+/*  MEDIA QUERIES AND RESPONSIVENESS STUFF*/
+
+
+.mobile-container{
+    
+   
+}
+
+/* #myLinks {
+    display: none;
+  } */
