--- a/templates/views/loginPage.hbs
+++ b/templates/views/loginPage.hbs
@@ -17,7 +17,8 @@
 
             <label> Password </label><br>
             <input type="password" placeholder="Enter your password" id="password" name="password"><br><br>
-            <label for="rememberme"> Remember Me <input type="checkbox" value="remember-me"></label>
+            <label for="rememberme"> Remember Me <input type="checkbox" value="remember-me"></label><br>
+            <a href="/forgotpassword"> Forgot Password? Click Here!</a>
 
             <button class="btn g-recaptcha"  id="login" type="submit">  Login </button><br>
 
