--- a/templates/views/partials/header.hbs
+++ b/templates/views/partials/header.hbs
@@ -1,10 +1,14 @@
- <header class="top_header">
-        <div class="header_logo">
-            {{!-- <img src="/img/icons/logo_symbol.png" alt="Logo. Image not available" height="80px" width="90px"> --}}
-            <h1 id="title"> CareerPilot </h1>
-        </div>
+<header class="top_header">
+    <div class="header_logo">
+        {{!-- <img src="/img/icons/logo_symbol.png" alt="Logo. Image not available" height="80px" width="90px"> --}}
+        <h1 id="title"> CareerPilot </h1>
+    </div>
+
+    <!-- Simulate a smartphone / tablet -->
+    {{!-- <div class="mobile-container"> --}}
+
         <nav class="header_navbar">
-            <ul>
+            <ul id="myLinks">
                 <li><a href="/"> Home Page </a> </li>
                 <li><a href="/certifications"> Certifications </a></li>
                 <li><a href="/courses"> Courses </a> </li>
@@ -24,25 +28,42 @@
             <!-- Or User Profile Icon  -->
 
         </div>
-    </header>
 
-    <nav class="small_navbar">
-        <ul>
-            <li> <a href="/sitemap"> Sitemap</a></li>
-            <li> Language </li>
-            <li><a href="/services"> Services </a></li>
-            <li><a href="/carreradvice"> Carrer Advice </a> </li>
-            <li><a href="/faq">F.A.Q </a></li>
-            <li><a href="/reportproblem">Report a problem </a></li>
-            <li> <a href="/feedbackPage"> Feedback </a></li>
-            <li> <a href="/about"> About </a> </li>
-            <li> <a href="/contactus">Contact Us </a> </li>
-            <li> <a href="/dashboard"> Dashboard </a> </li>
-            <li> <a href="/logout"> Logout  </a> </li>
-            <li> Search </li>
-        </ul>
-    </nav>
+        {{!-- Hamburger Icon --}}
 
-    <script>
-        
-    </script>
+        {{!-- <a href="javascript:void(0);" class="icon" onclick="toggleNav()">
+            <i class="fa fa-bars"></i>
+        </a> --}}
+
+        {{!-- End Mobile Container Simulation --}}
+
+    </div>
+</header>
+
+<nav class="small_navbar">
+    <ul>
+        <li> <a href="/sitemap"> Sitemap</a></li>
+        <li> Language </li>
+        <li><a href="/services"> Services </a></li>
+        <li><a href="/carreradvice"> Carrer Advice </a> </li>
+        <li><a href="/faq">F.A.Q </a></li>
+        <li><a href="/reportproblem">Report a problem </a></li>
+        <li> <a href="/feedbackPage"> Feedback </a></li>
+        <li> <a href="/about"> About </a> </li>
+        <li> <a href="/contactus">Contact Us </a> </li>
+        <li> <a href="/dashboard"> Dashboard </a> </li>
+        <li> <a href="/logout"> Logout </a> </li>
+        <li> <div id="searchbox"> <input type="text" placeholder="Search anything"> <a href="#"><img src="img/vectors/search.png" height="15px" width="15px"></a></div></li>
+    </ul>
+</nav>
+
+{{!-- <script>
+//function toggleNav() {
+ // var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script> --}}
