--- a/templates/views/dashboard.hbs
+++ b/templates/views/dashboard.hbs
@@ -101,7 +101,7 @@
 
                 <h1 class="section-titles"> Welcome, {{userName}} </h1>
 
-                <p class="section-para">
+                <p class="section-para index-para">
                     Welcome to CareerPilot, We are excited to have you on board and hope that our platform can help you
                     achieve your
                     career goals. CareerPilot your ultimate destination for students seeking internships, jobs, and
@@ -130,7 +130,7 @@
 
                 <h2 class="section-titles"> What's hot? </h2>
 
-                <p class="section-para">In today's global economy, multinational corporations (MNCs) play a significant
+                <p class="section-para index-para">In today's global economy, multinational corporations (MNCs) play a significant
                     role in shaping the business
                     landscape. These companies operate in multiple countries, employ thousands of people, and generate
                     billions
@@ -169,11 +169,33 @@
 
                 <div class="dashboardItems" id="suggestionsContainerDashboard"></div>
 
-                <h2 class="sec-titles"> Learn the best way blah blah blah </h2>
+                <h1 class="section-titles"> Learn the best Career Roadmaps Now </h1>
 
-                <div>
+                <p class="section-para index-para">
                     Lorem ipsum dolor sit amet consectetur.
-                </div>
+                </p>
+
+                  <div class="image-gallery">
+
+                <img src="/img/roadmaps/cybersec.jpg">
+                <img src="/img/roadmaps/ai.jpg">
+                <img src="/img/roadmaps/web.jpg">
+            </div>
+
+              <div class="image-gallery">
+
+                <img src="/img/roadmaps/cybersec.jpg">
+                <img src="/img/roadmaps/ai.jpg">
+                <img src="/img/roadmaps/web.jpg">
+            </div>
+
+              <div class="image-gallery">
+
+                <img src="/img/roadmaps/cybersec.jpg">
+                <img src="/img/roadmaps/ai.jpg">
+                <img src="/img/roadmaps/web.jpg">
+            </div>
+
             </section>
 
             {{!-- Courses Section 3 --}}
@@ -182,7 +204,7 @@
 
             <h1 class="section-titles"> Courses </h1>
 
-            <p> The IT industry is constantly evolving, and staying up-to-date with the latest technologies and trends
+            <p class="section-para index-para"> The IT industry is constantly evolving, and staying up-to-date with the latest technologies and trends
                 is
                 essential for anyone looking to build a career in this field. IT industry courses can provide valuable
                 training
