--- a/public/css/index.css
+++ b/public/css/index.css
@@ -112,6 +112,7 @@ blockquote h3:after {
     font-size: 1.1rem;
     font-weight: 600;
     text-align: center;
+    padding: 10px;
 }
 
 .img-containers-center {
@@ -368,14 +369,6 @@ h3 {
 
 }
 
-
-.dashboard-section {
-
-
-    display: inline-block;
-}
-
-
 .dashboard-group {
 
     display: flex;
@@ -445,6 +438,13 @@ h3 {
     width: 80%;
     margin: auto;
 }
+
+.linkedinContainer{
+
+    width: 80%;
+    margin: auto;
+}
+
 
 .internshipData{
 
