Commit - 14 Error404 Page Upgraded and few retouches

--- a/templates/views/404error.hbs
+++ b/templates/views/404error.hbs
@@ -5,11 +5,16 @@
     <title> Error 404 : CarrerPilot</title>
 </head>
 <body>
-    
-</body>
-</html>{{>headerMeta}}
 {{>header}}
+    
+<h1 class="section-titles index-para"> ERROR 404 : Page not found </h1>
+<center>
+
+<img src="/img/error404.jpg" alt="404 Dude Image not found as well!!" height="50%" width="50%">
+
+<br> <button class="btn"><a href="/"> Go back to Home Page</a></button>
+</center>
+</body>
+</html>
 
 
-
-<h1> ERROR 404 : Page not found </h1>
