--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,2 +1,17 @@
-{{>headerMeta}}
-{{>header}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    {{>headerMeta}}
+    <title> About : CareerPilot </title>
+</head>
+<body>
+    {{>header}}
+
+    <div class="container">
+
+        <h1 class="section-titles">  About Us </h1>
+    </div>
+</body>
+</html>
+
+
